--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,7 @@ body{
     align-items: center;
     justify-content: center;
 
-    background-color: #333;
+    background-color: #2e2822;
     font-family: sans-serif;
 
     overflow-y: scroll;
